--- a/app/src/main/res/layout/item_apply_search_friend.xml
+++ b/app/src/main/res/layout/item_apply_search_friend.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_apply_search_friend"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-   <ImageView
+    android:layout_height="wrap_content"
+    android:background="#ffffff">
+
+    <ImageView
         android:id="@+id/iv_apply_profile"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -23,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
         android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:textStyle="normal"
-        android:textSize="14sp"
         android:textColor="#1c1c1c"
+        android:textSize="14sp"
+        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="@+id/iv_apply_profile"
         app:layout_constraintStart_toEndOf="@+id/iv_apply_profile"
         app:layout_constraintTop_toTopOf="@+id/iv_apply_profile"
