[CHORE] 친구 목록, 친구 추가 뷰 일러스트 추가

--- a/app/src/main/res/layout/item_friend_list.xml
+++ b/app/src/main/res/layout/item_friend_list.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_launcher_background" />
+        android:src="@drawable/ic_img_profile" />
 
     <TextView
         android:id="@+id/tv_friend_name"
