--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -95,6 +95,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_search_friend_id" >
 
+
+
         <ImageView
             android:id="@+id/iv_search_profile_image"
             android:layout_marginVertical="13dp"
@@ -103,7 +105,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/ic_img_profile" />
 
             <TextView
                 android:id="@+id/tv_search_friend_name"
