--- a/app/src/main/res/layout/fragment_noti_in_progress.xml
+++ b/app/src/main/res/layout/fragment_noti_in_progress.xml
@@ -75,29 +75,29 @@
         tools:layout_editor_absoluteX="0dp">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/iv_ing_null"
             android:layout_width="164dp"
             android:layout_height="164dp"
             android:layout_marginBottom="20dp"
-            android:src="@drawable/ic_launcher_background"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
+            android:src="@drawable/ic_img_list_null"
+            app:layout_constraintBottom_toTopOf="@+id/tv_ing_null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tv_ing_null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/noti_in_progress_null"
             android:textColor="@color/gray05"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintEnd_toEndOf="@+id/iv_ing_null"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintStart_toStartOf="@+id/iv_ing_null"
+            app:layout_constraintTop_toBottomOf="@+id/iv_ing_null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
