[ADD] 마이페이지 디자인 적용

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -181,6 +181,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:overScrollMode="never"
             android:visibility="visible">
 
             <include android:id="@+id/nv_mypage" layout="@layout/view_mypage"/>
