--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,22 +15,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_seemeet_logo" />
+        app:srcCompat="@drawable/ic_img_seemeet_logo_symbol_typo_square" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="21dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/rectangle_gray_10"
-        android:drawableLeft="@drawable/ic_user"
-        android:drawablePadding="10dp"
+        android:drawableLeft="@drawable/ic_btn_friends"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:paddingStart="20dp"
         android:textColor="#5A5A5A"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
@@ -38,15 +38,16 @@
     <EditText
         android:id="@+id/et_pw"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="50dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/rectangle_gray_10"
-        android:drawableLeft="@drawable/ic_lock"
-        android:drawablePadding="10dp"
+        android:drawableLeft="@drawable/ic_login_lock"
+        android:drawablePadding="18dp"
         android:hint="@string/pw"
+        android:fontFamily="@font/spoqa_han_sans_neo_regular"
+        android:textSize="14sp"
         android:inputType="textPassword"
-        android:paddingStart="20dp"
-        android:textColor="#5A5A5A"
+        android:paddingStart="16dp"
         app:layout_constraintEnd_toEndOf="@+id/et_email"
         app:layout_constraintStart_toStartOf="@+id/et_email"
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
@@ -59,33 +60,42 @@
         android:background="@drawable/rectangle_pink_10"
         android:text="@string/login"
         android:textColor="@color/white"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
+        android:textStyle="normal"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
         app:layout_constraintStart_toStartOf="@+id/et_pw"
         app:layout_constraintTop_toBottomOf="@+id/et_pw" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/iv_small_logo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="2dp"
         android:gravity="end"
         android:text="SeeMeet"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintEnd_toStartOf="@+id/tv_register"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_register" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:srcCompat="@drawable/ic_img_seemeet_logo_typo_banner" />
 
     <TextView
         android:id="@+id/tv_register"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="251dp"
+        android:layout_marginTop="21dp"
         android:text="@string/login_register"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="#4b4b4b"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/iv_small_logo"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
