--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,14 +53,15 @@
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_pw_show_hidden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/et_pw"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
         app:layout_constraintTop_toTopOf="@+id/et_pw"
-        app:srcCompat="@drawable/ic_pw_show" />
+        app:srcCompat="@drawable/ic_pw_hidden" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_login"
