[FEAT] 보낸 요청 다이얼로그 추가

--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -219,8 +219,7 @@
                         android:paddingBottom="14dp"
                         android:layout_marginTop="15dp"
                         android:textColor="@color/white"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginEnd="0dp"
+                        android:layout_margin="2dp"
                         android:text="취소"
                         app:layout_constraintEnd_toStartOf="@id/btn_send_decide"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -232,13 +231,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/rectangle_gray02_10"
-                        android:text="거절"
+                        android:text="확정"
                         android:paddingStart="63dp"
                         android:paddingEnd="63dp"
                         android:paddingTop="14dp"
                         android:paddingBottom="14dp"
                         android:textColor="@color/white"
                         android:textSize="14sp"
+                        android:enabled="false"
+                        android:layout_margin="2dp"
                         app:layout_constraintBottom_toBottomOf="@id/btn_send_cancel"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_chainStyle="spread"
