--- a/app/src/main/res/layout/item_notification_send.xml
+++ b/app/src/main/res/layout/item_notification_send.xml
@@ -65,8 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_send_msg_wait"
             app:layout_constraintTop_toBottomOf="@id/tv_send_msg_wait">
         </com.google.android.material.chip.ChipGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
