[FEAT] 아이디 비밀번호 예외처리

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor="#5A5A5A"
+        android:textColor=" #1c1c1c"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,11 +43,12 @@
         android:background="@drawable/rectangle_gray_10"
         android:drawableLeft="@drawable/ic_login_lock"
         android:drawablePadding="18dp"
-        android:hint="@string/pw"
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:textSize="14sp"
+        android:hint="@string/pw"
         android:inputType="textPassword"
         android:paddingStart="16dp"
+        android:textColor=" #1c1c1c"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/et_email"
         app:layout_constraintStart_toStartOf="@+id/et_email"
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
