[FEAT] 버그 수정 (처음에 로그인 버튼 막기)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,8 @@
         android:layout_height="54dp"
         android:layout_marginBottom="265dp"
         android:background="@drawable/rectangle_gray04_10"
+        android:clickable="false"
+        android:enabled="false"
         android:fontFamily="@font/spoqa_han_sans_neo_medium"
         android:text="@string/login"
         android:textColor="@color/white"
