친구이름 검색 힌트 버그 수정

--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -165,14 +165,14 @@
                     android:background="@null"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:hint="제목"
-                    android:maxLength="23"
-                    android:maxLines="1"
-                    android:inputType="text"
-                    android:singleLine="true"
                     android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:maxLines="1"
                     android:paddingStart="25dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
+                    android:singleLine="true"
                     android:textColorHint="#a3a3a3"
                     android:textSize="14sp"
                     android:textStyle="normal"
@@ -199,7 +199,7 @@
                     android:layout_height="1dp"
                     android:layout_marginStart="14dp"
                     android:layout_marginEnd="14dp"
-                    android:background="@android:color/darker_gray"
+                    android:background="#e7e7e7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_title" />
@@ -215,6 +215,7 @@
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:gravity="top"
                     android:hint="약속 상세 내용"
+                    android:scrollbars="vertical"
                     android:inputType="textMultiLine|textPersonName"
                     android:paddingStart="16dp"
                     android:paddingTop="10dp"
